--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" href="css/style.css">
 
 	<!-- JAVASCRIPT -->
-	<script defer src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js" type="text/javascript" charset="utf-8"></script>	
+	<script defer src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js" type="text/javascript"
+		charset="utf-8"></script>
 	<script defer src="js/jquery/jquery.jSlots.min.js" type="text/javascript" charset="utf-8"></script>
 	<script defer src="js/jquery/jquery.easing/jquery.easing.1.3.js" type="text/javascript" charset="utf-8"></script>
 	<script defer src="js/index.js" type="text/javascript" charset="utf-8"></script>
@@ -22,6 +23,8 @@
 
 	<div class="container">
 		
+		<div id="results"></div>
+
 		<ul class="slot">
 			<!-- IN REVERSE, SO THE 7'S SHOW UP FIRST -->
 			<li>
@@ -61,10 +64,16 @@
 			</li>
 		</ul>
 
-		<div id="result"></div>
+		<input type="button" id="playSlot" value="Spin">
 
-		<input type="button" id="playSlot" value="Play">
+		<input type="reset" id="resetSlot" value="Reset">
+
+		<div>			
+			<div id="attempts"></div>
+		</div>
+
 	</div>
 
 </body>
+
 </html>
