--- a/index.html
+++ b/index.html
@@ -22,8 +22,22 @@
 	<!-- <canvas id="myCanvas" width="500" height="600"></canvas> -->
 
 	<div class="container">
+
+		<div id="logoWrapper">
+			<span id="logo1"></span>
+			<span id="logo2"></span>
+			<span id="logo3"></span>
+			<span id="logo4"></span>
+			<span id="logo5"></span>
+			<span id="logo6"></span>
+			<span id="logo7"></span>
+			<span id="logo8"></span>
+			<div id="logo"></div>
+		</div>
+		<h1>Avid <span>Lemon'made</span></h1>
 		
-		<div id="results"></div>
+		
+		
 
 		<ul class="slot">
 			<!-- IN REVERSE, SO THE 7'S SHOW UP FIRST -->
@@ -68,7 +82,8 @@
 
 		<input type="reset" id="resetSlot" value="Reset">
 
-		<div>			
+		<div>
+			<div id="results"></div>			
 			<div id="attempts"></div>
 		</div>
 
