reset css, create obj

--- a/index.html
+++ b/index.html
@@ -19,75 +19,81 @@
 
 <body>
 
-	<!-- <canvas id="myCanvas" width="500" height="600"></canvas> -->
+	
 
 	<div class="container">
 
-		<div id="logoWrapper">
-			<span id="logo1"></span>
-			<span id="logo2"></span>
-			<span id="logo3"></span>
-			<span id="logo4"></span>
-			<span id="logo5"></span>
-			<span id="logo6"></span>
-			<span id="logo7"></span>
-			<span id="logo8"></span>
-			<div id="logo"></div>
-		</div>
-		<h1>Avid <span>Lemon'made</span></h1>
-		
-		
-		
-
-		<ul class="slot">
-			<!-- IN REVERSE, SO THE 7'S SHOW UP FIRST -->
-			<li>
-				<span>
-					<img src="images/fruit/24.png" alt="" srcset="">
-				</span>
-			</li>
-			<li>
-				<span>
-					<img src="images/fruit/23.png" alt="" srcset="">
-				</span>
-			</li>
-			<li>
-				<span>
-					<img src="images/fruit/25.png" alt="" srcset="">
-				</span>
-			</li>
-			<li>
-				<span>
-					<img src="images/fruit/26.png" alt="" srcset="">
-				</span>
-			</li>
-			<li>
-				<span>
-					<img src="images/fruit/27.png" alt="" srcset="">
-				</span>
-			</li>
-			<li>
-				<span>
-					<img src="images/fruit/28.png" alt="" srcset="">
-				</span>
-			</li>
-			<li>
-				<span>
-					<img src="images/fruit/29.png" alt="" srcset="">
-				</span>
-			</li>
-		</ul>
-
-		<input type="button" id="playSlot" value="Spin">
-
-		<input type="reset" id="resetSlot" value="Reset">
-
 		<div>
-			<div id="results"></div>			
+			<div id="logoWrapper">
+				<span id="logo1"></span>
+				<span id="logo2"></span>
+				<span id="logo3"></span>
+				<span id="logo4"></span>
+				<span id="logo5"></span>
+				<span id="logo6"></span>
+				<span id="logo7"></span>
+				<span id="logo8"></span>
+				<div id="logo"></div>
+			</div>
+			<h1>SLOTS <span>Lemon'made</span></h1>
+		</div>
+
+		<div id="slotMachine">
+			<ul class="slot">
+				<!-- IN REVERSE, SO THE 7'S SHOW UP FIRST -->
+				<li>
+					<span>
+						<img src="images/fruit/24.png" alt="" srcset="">
+					</span>
+				</li>
+				<li>
+					<span>
+						<img src="images/fruit/23.png" alt="" srcset="">
+					</span>
+				</li>
+				<li>
+					<span>
+						<img src="images/fruit/25.png" alt="" srcset="">
+					</span>
+				</li>
+				<li>
+					<span>
+						<img src="images/fruit/26.png" alt="" srcset="">
+					</span>
+				</li>
+				<li>
+					<span>
+						<img src="images/fruit/27.png" alt="" srcset="">
+					</span>
+				</li>
+				<li>
+					<span>
+						<img src="images/fruit/28.png" alt="" srcset="">
+					</span>
+				</li>
+				<li>
+					<span>
+						<img src="images/fruit/29.png" alt="" srcset="">
+					</span>
+				</li>
+			</ul>
+
+			<div>
+				<input type="button" id="playSlot" value="Spin">
+
+				<input type="reset" id="resetSlot" value="Reset">
+			</div>
+
+			
+
+			<div id="results"></div>
 			<div id="attempts"></div>
+
 		</div>
 
 	</div>
+	
+	<!-- <canvas id="myCanvas" width="700" height="100vh"></canvas> -->
 
 </body>
 
