Reset, CSS, Object

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Lemon'made Slots</title>
 
 	<!-- CSS && FONTS-->
-	<link href='http://fonts.googleapis.com/css?family=Gravitas+One&text=1234567' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Gravitas+One&text=1234567' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 
 	<!-- JAVASCRIPT -->
