--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<div class="container">
 
-		<div>
+		<div id="head">
 			<div id="logoWrapper">
 				<span id="logo1"></span>
 				<span id="logo2"></span>
