push to gh branch

--- a/index.html
+++ b/index.html
@@ -42,37 +42,37 @@
 			<ul class="slot">
 				<!-- IN REVERSE, SO THE 7'S SHOW UP FIRST -->
 				<li>
-					<span>
+					<span class="imgDiv">
 						<img src="images/fruit/24.png" alt="" srcset="">
 					</span>
 				</li>
 				<li>
-					<span>
+					<span class="imgDiv">
 						<img src="images/fruit/23.png" alt="" srcset="">
 					</span>
 				</li>
 				<li>
-					<span>
+					<span class="imgDiv">
 						<img src="images/fruit/25.png" alt="" srcset="">
 					</span>
 				</li>
 				<li>
-					<span>
+					<span class="imgDiv">
 						<img src="images/fruit/26.png" alt="" srcset="">
 					</span>
 				</li>
 				<li>
-					<span>
+					<span class="imgDiv">
 						<img src="images/fruit/27.png" alt="" srcset="">
 					</span>
 				</li>
 				<li>
-					<span>
+					<span class="imgDiv">
 						<img src="images/fruit/28.png" alt="" srcset="">
 					</span>
 				</li>
 				<li>
-					<span>
+					<span class="imgDiv">
 						<img src="images/fruit/29.png" alt="" srcset="">
 					</span>
 				</li>
