--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/style.css">
 
 	<!-- JAVASCRIPT -->
-	<script defer src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js" type="text/javascript"
+	<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js" type="text/javascript"
 		charset="utf-8"></script>
 	<script defer src="js/jquery/jquery.jSlots.min.js" type="text/javascript" charset="utf-8"></script>
 	<script defer src="js/jquery/jquery.easing/jquery.easing.1.3.js" type="text/javascript" charset="utf-8"></script>
