Update README.md file

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 
 <body>
 
-	ergvleonglrebretgbrh
-
 	<div class="container">
 
 		<div id="head">
@@ -78,21 +76,22 @@
 				</li>
 			</ul>
 
+			<div id="results"></div>
+			<div id="attempts"></div>
+
 			<div>
 				<input type="button" id="playSlot" value="Spin">
 
 				<input type="reset" id="resetSlot" value="Reset">
 			</div>
 
-			
 
-			<div id="results"></div>
 			<div id="attempts"></div>
 
 		</div>
 
 	</div>
-	
+
 	<!-- <canvas id="myCanvas" width="700" height="100vh"></canvas> -->
 
 </body>
