--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					</li>
 				</ul>
 
-				<div>
+				<div id="btnDiv">
 					<input type="button" id="playSlot" value="Spin">
 
 					<input type="reset" id="resetSlot" value="Reset">
